--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "useraccounts-react-semantic",
-  "version": "1.0.0",
-  "description": "useraccounts react semantic integration",
+  "name": "accounts-react-semantic-ui",
+  "version": "1.0.1",
+  "description": "Semantic UI Components for Accounts React",
   "main": "index.js",
   "author": "Roy Giladi",
   "license": "ISC"
