--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "accounts-react-semantic-ui",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Semantic UI Components for Accounts React",
   "main": "index.js",
-  "author": "Roy Giladi",
+  "author": "Day Waterbury",
   "license": "ISC"
 }
